radical modification for the implementation of tokens
